deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cutter-status-dashboard
  namespace: default
  labels:
    app.kubernetes.io/instance: cutter-status-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cutter-status-dashboard
  template:
    metadata:
      labels:
        app: cutter-status-dashboard
    spec:
      imagePullSecrets:
        - name: cutter-dev-gcr-regcred
      volumes:
        - name: service-account
          secret:
            secretName: "cutter-dev-idp-key"
        - name: cutter-dev-sql-proxy-sa
          secret:
            secretName: cutter-dev-sql-proxy-sa
      terminationGracePeriodSeconds: 60  
      containers:
      - name: cutter-status-dashboard
        image: "gcr.io/$PROJECT_ID/cutter-status-dashboard:$TAG"
        args:
            - --cooldown=1800
            - --log=error-log-sink-$ENV
        imagePullPolicy: Always
        volumeMounts:
          - name: service-account
            mountPath: /keys/
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
            - name: http
              containerPort: 8080
              protocol: TCP
        livenessProbe:
            httpGet:
              scheme: HTTP
              path: /healthcheck
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /healthcheck
            port: http
          initialDelaySeconds: 15
          periodSeconds: 10
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.14
        resources:
          requests:
            cpu: 100m
        command:
          - /cloud_sql_proxy
          - -instances=cutter-214115:us-central1:cutter-status-dashboard-dev=tcp:5432
          - -credential_file=/secrets/cloudsql/credentials.json
          - ./cloudbuild/migrations
        securityContext:
          runAsUser: 2 # non-root user
          allowPrivilegeEscalation: false
        volumeMounts:
          - name: cutter-dev-sql-proxy-sa
            mountPath: /secrets/cloudsql
            readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  name: cutter-status-dashboard
  labels:
    app: cutter-status-dashboard
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: cutter-status-dashboard
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
